﻿## Version 1.7.1 (13/01/2016) ##
[+] ajout attribut autocomplete="off" sur le champ antispam (contribution alexandre-lg)
[+] Configuration de l'affichage des libellés des champs
[+] Configuration de l'affichage des libellés dans les champs (placeholder)
BUG Erreur avec des apostrophes dans le titre du menu

## Version 1.7 (20/07/2015) ##
[+] Compatibilité avec le plugin plxMyCapchaImage

## Version 1.6.1 (13/05/2015) ##
[+] Compatibilité PluXml 5.4
BUG fix #11: Dossier themes codé en dur
BUG fix #10: Paramètre de l'URL avec une extension : title absent

## Version 1.6 (27/02/2014) ##
[+] Paramétrage du lien dans l'url
[+] Gestion du paramétrage multilingue
[+] Gestion css à partir de la configuration du plugin
[+] Compatibilité avec le plugin plxMyMultiLingue

## Version 1.5.6 (20/02/2014) ##
[+] Compatibilité plugin plxMyMultiLingue

## Version 1.5.5 (13/12/2013) ##
[+] Ajout d'un champ texte qui s'affiche au dessus du formulaire paramétrable depuis l'interface (contribution JulesVincent)
[+] Balise title dans le lien du menu de la page de contact

## Version 1.5.4 (13/06/2013) ##
[+] Compatibilité PluXml 5.2
[+] Paramètre pour activer/désactiver le captcha anti-spam dans le formulaire de contact

## Version 1.5.3 (19/03/2013) ##
[+] Possibilité de saisir plusieurs destinataires séparés par une virgule

## Version 1.5.2 (11/03/2013) ##
[+] Ajout destinataire en copie et en copie cachée dans l'envoi du mail de contact
BUG Pas de prise en compte des magic_quotes

## Version 1.5.1 (13/03/2012) ##
BUG Mauvais titre de la page de contact dans la balise <title>

## Version 1.5 (01/02/2012) ##
[+] Ne requiert plus l'utilisation de la fonction staticList pour accéder au formulaire
[+] Affichage de la page dans le sitemap (requiert PluXml 5.1.6 minimum)
BUG Pas d'affichage du message d'alerte dans l'administration si l'adresse email à contacter n'est pas renseignée
BUG Messages d'erreurs à cause de variables non renseignées (warnings)

## Version 1.4 (21/12/2011) ##